# gtfez

./: README.md  setup.cfg
gtfez/: __init__.py  add_gene_names.py  add_gene_symbols.py  cleanup_ncbi.py
tests/: test_add_gene_names.py  test_cleanup.py  test_parsing.py
tests/data/: ensID_to_symbol.tsv  test_add_gene_names_out.gtf  test_in.gtf  test_ncbi.gtf  test_ncbi_out.gtf  test_out.gtf
