[metadata]
name = gtfez
version = 0.0.1

[options]
packages = find: 

[options.extras_require]
test = pytest
devel =
    flake8
    mypy
    black

#[options.entry_points]
#console_scripts =
#    agptools = agp.agptools:main
#    break_contigs = agp.break_contigs:main [bio]

[flake8]
max-line-length = 88
extend-ignore = E203
