[metadata]
name = gtfez
version = 0.0.1

[options]
packages = find: 

[options.extras_require]
test = pytest
devel =
    flake8
    mypy
    black

[options.entry_points]
console_scripts =
    add_gene_names = gtfez.add_gene_names:main
    cleanup_ncbi_gtf = gtfez.cleanup_ncbi:main

[flake8]
max-line-length = 88
extend-ignore = E203
